--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "normalize.css": "^8.0.1"
   },
   "browserslist": [
-    "> 2%",
-    "last 2 versions"
+    "last 5 versions",
+    "> 0.1%"
   ]
 }
